修改一些细节

--- a/application/home/view/course/bao_list.html
+++ b/application/home/view/course/bao_list.html
@@ -45,7 +45,7 @@ $(function(){
                                     <h3>{$val.title}</h3>
                                     <p>{$val.describe}</p>
                                     <div>
-                                        <div class="kcsz_ner_fr">{$val.cang}</div>
+                                        <div class="kcsz_ner_fr">{$val.buy_num}</div>
                                         <div class="kcsz_ner_righ">￥{$val.price}元</div>
                                     </div>
                                 </li>
