--- a/application/home/view/course/course_list.html
+++ b/application/home/view/course/course_list.html
@@ -77,6 +77,7 @@ $(function(){
                                         <li>
                                             <img src="{$admin_path}{$val.pic}" alt="内蒙古都林教育"/>
                                             <h3>{$val.title}</h3>
+                                            <p>{$val.small_title}</p>
                                             <div>
                                                 <div class="kcsz_ner_fr">{$cang}</div>
                                                 <div class="kcsz_ner_righ">￥{$val.price}元</div>
