--- a/application/home/view/index/index.html
+++ b/application/home/view/index/index.html
@@ -112,7 +112,7 @@
                                     <img src="{$val.pic}" alt="内蒙古都林教育" style="height: 265px;height: 170px;"/>
                                     <h3>{$val.title}</h3>
                                     <div>
-                                        <div class="kcsz_ner_fr">{$val.cang}</div>
+                                        <div class="kcsz_ner_fr">{$val.buy_num}</div>
                                         <div class="kcsz_ner_righ">￥{$val.price}元</div>
                                     </div>
                                 </li>
@@ -131,7 +131,7 @@
                               <h3>{$val.title}</h3>
                               <p>{$val.describe}</p>
                               <div>
-                                <div class="kcsz_ner_fr">{$val.cang}</div>
+                                <div class="kcsz_ner_fr">{$val.buy_num}</div>
                                 <div class="kcsz_ner_righ">￥{$val.price}元</div>
                               </div>
                             </li>
@@ -150,7 +150,7 @@
                                   <h3>{$val.title}</h3>
                                   <p>{$val.describe}</p>
                                   <div>
-                                    <div class="kcsz_ner_fr">{$val.cang}</div>
+                                    <div class="kcsz_ner_fr">{$val.buy_num}</div>
                                     <div class="kcsz_ner_righ">￥{$val.price}元</div>
                                   </div>
                                 </li>
