--- a/application/home/view/teacher/info.html
+++ b/application/home/view/teacher/info.html
@@ -37,9 +37,9 @@ $(function(){
                     <li>
                         <img src="{$admin_path}{$val.pic}" alt="内蒙古都林教育"/>
                         <h3>{$val.title}</h3>
-                        <p>{$val.describe}</p>
+                        <p>{$val.small_title}</p>
                         <div>
-                            <div class="kcsz_ner_fr">{$val.cang}</div>
+                            <div class="kcsz_ner_fr">{$val.buy_num}</div>
                             <div class="kcsz_ner_righ">￥{$val.price}元</div>
                         </div>
                     </li>
