修改一些细节

--- a/application/home/view/common/common_navhead.html
+++ b/application/home/view/common/common_navhead.html
@@ -29,7 +29,7 @@
                 </a>
             </li>
             <li class="mdui-collapse-item app-hide-list  app-collapse-list">
-                <a href="{:url('article/article_list')}" class=" mdui-list-item mdui-ripple  mdui-p-x-0">
+                <a href="{:url('article/article_list')}?article_type=0" class=" mdui-list-item mdui-ripple  mdui-p-x-0">
                     <div class="menu-click mdui-list-item-content mdui-text-left">
                         新闻中心 <i class="mdui-collapse-item-arrow mdui-icon material-icons mdui-float-right"> &#xe5cc; </i>
                     </div>
