--- a/application/home/view/course/video.html
+++ b/application/home/view/course/video.html
@@ -18,7 +18,7 @@ $(function(){
 <header>
   {include file="common/common_navhead"/}
   <div class="head-middle">内蒙古都林教育</div>
-  <a class="backprev" href="denglu.heml"> <img src="/static/home/img/denglu.png" alt="内蒙古都林教育"/> </a> </header>
+  <a class="backprev" href="{:url('user/login')}"> <img src="/static/home/img/denglu.png" alt="内蒙古都林教育"/> </a> </header>
 <div class="shipin"><h3>当前正在播放：法律职业道德（蒙授）</h3>
 <!--视频修改--><!--视频修改--> <!--视频修改--> <!--视频修改--> <!--视频修改--> <!--视频修改--> <!--视频修改--> <!--视频修改--> <!--视频修改-->   <div class="shipin_img">
     <video autobuffer="" controls="" id="video" src="{$course_list[0]['b_video']}" controlslist="nodownload" style="height: 400px;" poster="/static/home/img/1.jpg" width="100%" ></video>
