--- a/application/home/view/my/index.html
+++ b/application/home/view/my/index.html
@@ -20,9 +20,9 @@ $(function(){
     {include file="common/common_navhead"/}
   
   <div class="head-middle">内蒙古都林教育</div>
-  <a class="backprev" href="denglu.heml"> <img src="/static/home/img/denglu.png" alt="内蒙古都林教育"/> </a> </header>
+  <a class="backprev" href="{:url('user/index')}"> <img src="/static/home/img/denglu.png" alt="内蒙古都林教育"/> </a> </header>
  <div class="xinwen_ban"><img src="/static/home/img/ms.jpg" alt="内蒙古都林教育"/></div>
-	<div class="wnewxqy"><h3><a href="index.html" >首页</a>><span><a href="wap_zf.html">个人中心</a></span></h3></div>
+	<div class="wnewxqy"><h3><a href="/" >首页</a>><span><a href="{:url('my/index')}">个人中心</a></span></h3></div>
 	
 
 	   <div class="myinfor_con">
