--- a/application/home/view/teacher/info.html
+++ b/application/home/view/teacher/info.html
@@ -21,7 +21,7 @@ $(function(){
   <div class="head-middle">内蒙古都林教育</div>
   <a class="backprev" href="{:url('my/index')}"> <img src="/static/home/img/denglu.png" alt="内蒙古都林教育"/> </a> </header>
  <div class="xinwen_ban"><img src="/static/home/img/ms.jpg" alt="内蒙古都林教育"/></div>
-  <div class="wnewxqy"><h3><a href="/" >首页</a>><a href="{:url('teacher/list')}">名师专区</a>><span><a href="newsxqy.html">{$info.name}</a></span></h3></div>
+  <div class="wnewxqy"><h3><a href="/" >首页</a>><a href="{:url('teacher/list')}">名师专区</a>><span><a href="#">{$info.name}</a></span></h3></div>
   <div class="wmsxqy"><div class="wmsxqy_im"><img src="/static/home/img/ms1.jpg"  alt="内蒙古都林教育"/> </div>
   <div class="wmsxqy_fr"><h3>{$info.name}</h3><p>都林教育讲师</p>
     <div class="wmsxqy_ner">{$info.introduction}</h2></div>
