--- a/application/home/view/teacher/list.html
+++ b/application/home/view/teacher/list.html
@@ -25,9 +25,9 @@ $(function(){
     <div class="con-tab-title wow fadeInUp">
         <div>
           <h4 style="border-bottom:.2rem solid #ee7800;"><a style="color:#ff6600;">全部名师</a></h4>
-          <h4><a href="#">综合</a></h4>
+          <!-- <h4><a href="#">综合</a></h4>
           <h4><a href="#">人气</a></h4>
-          <h4><a href="#">好评</a></h4>
+          <h4><a href="#">好评</a></h4> -->
         </div>
     </div>
     <div class="con-tab con-tab-1" style="display:block">
