--- a/application/home/view/article/info.html
+++ b/application/home/view/article/info.html
@@ -21,7 +21,7 @@ $(function(){
     <div class="head-middle">内蒙古都林教育</div>
     <a class="backprev" href="{:url('my/index')}"> <img src="/static/home/img/denglu.png" alt="内蒙古都林教育"/> </a> </header>
     <div class="xinwen_ban"><img src="/static/home/img/new_ban.jpg" alt="内蒙古都林教育"/></div>
-    <div class="wnewxqy"><h3><a href="index.html" >首页</a>><a href="news.html">新闻中心</a>><span><a href="newsxqy.html">新闻详情</a></span></h3></div>
+    <div class="wnewxqy"><h3><a href="/" >首页</a>><a href="{:url('article/article_list')}?article_type=0">新闻中心</a>><span><a href="#">新闻详情</a></span></h3></div>
     <div class="wnewxqy_ner">
         <h1>{$info.title}</h1>
         <p>{$info.create_time|date="Y-m-d H:i"}&nbsp;&nbsp;作者：内蒙古杜林教育 &nbsp;&nbsp;      阅读：{$info.show_num}</p>
