--- a/application/home/view/course/bao_list.html
+++ b/application/home/view/course/bao_list.html
@@ -1,5 +1,9 @@
 {include file="common/common_head"/}
-
+<style>
+	.active{
+		border-bottom : 2px solid red;
+	}
+</style>
 <script type="text/javascript" src="/static/home/js/jq.min.js"></script>
 <script type="text/javascript">
 $(function(){
