--- a/application/home/view/course/course_list.html
+++ b/application/home/view/course/course_list.html
@@ -75,7 +75,7 @@ $(function(){
                                 {volist name="course_list" id="val"}
                                     <a href="{:url('course/info')}?id={$val.id}" target="_blank">
                                         <li>
-                                            <img src="{$admin_path}{$val.pic}" alt="内蒙古都林教育"/>
+                                            <img src="{$admin_path}{$val.pic}" style="height: 265px;height: 170px;" alt="内蒙古都林教育"/>
                                             <h3>{$val.title}</h3>
                                             <p>{$val.small_title}</p>
                                             <div>
