--- a/application/home/view/my/course_list.html
+++ b/application/home/view/my/course_list.html
@@ -25,7 +25,7 @@
 	<div class="history-go-back"  style="background: #FFFFFF;height:4rem;line-height:4rem;border-bottom:1px solid #f5f5f5;">
         <a href="{:url('my/index')}" ><span></span></a>
         <span>我的课程</span>
-        <a style="width:1.5rem;position:absolute;right:1.3rem;top:1.2rem;" href="index.html" target="_self"><img src="/static/home/img/index_icon.png" alt="" style="display:block;width:100%;"></a>
+        <a style="width:1.5rem;position:absolute;right:1.3rem;top:1.2rem;" href="/" target="_self"><img src="/static/home/img/index_icon.png" alt="" style="display:block;width:100%;"></a>
     </div>
     <div class="mycourse">
         <div class="course_bu">
